--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -25,4 +25,8 @@
     <string name="record_detail">Meal Details:</string>
     <string name="record_upload">Upload</string>
     <string name="record_meal">Upload your meal ^^</string>
+    <string name="try_again">Try Again</string>
+    <string name="signIn_error"> invalid account or password</string>
+    <string name="success">Success</string>
+    <string name="signIn_success">Sign in success</string>
 </resources>
