finish taking photos

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -29,6 +29,7 @@
     <string name="signIn_error"> invalid account or password</string>
     <string name="success">Success</string>
     <string name="signIn_success">Sign in success</string>
+    <string name="add_meal"> Add Meal</string>
     <!--recipe part-->
     <string name="recommend_Recipe">\nRecommend Recipe</string>
     <!--shop part-->
