add nutrition ui and update swipe-to-delete function for recipe

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -30,6 +30,7 @@
     <string name="success">Success</string>
     <string name="signIn_success">Sign in success</string>
     <string name="add_meal"> Add Meal</string>
+    <string name="see_detail"> See detail</string>
     <!--recipe part-->
     <string name="recommend_Recipe">\nRecommend Recipe</string>
     <!--shop part-->
