improve the register part with firebase

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -19,6 +19,7 @@
     <string name="title_activity_register">Register</string>
     <string name="title_activity_register_password">Password</string>
     <string name="title_activity_register_username">Username</string>
+    <string name="title_activity_register_email">Email</string>
     <string name="title_activity_register_confirmPassword">Confirm password</string>
     <!--record part-->
     <string name="record_main">Record Today\'s Meal:</string>
