Created buttons which connect to modal which is set up.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -38,5 +38,18 @@
     <string name="price_name">Price</string>
     <string name="apple">Apple</string>
     <string name="submit_button">Submit</string>
+    <!--personal info part -->
+    <string name="changeEmail">Change Email</string>
+    <string name="changePassword">Change Password</string>
+    <string name="changeDietPlan">Change Diet Plan</string>
+    <string name="enterNew">Enter new</string>
+    <string name="password">password</string>
+    <string name="email">email</string>
+    <string name="dietPlan">Diet Plan</string>
+    <string name="update">Update</string>
+    <string name="dietPlanLabel">Diet Plan</string>
+    <string name="emailLabel">email</string>
+    <string name="passwordLabel">password</string>
+
 
 </resources>
