add chat front end

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -54,5 +54,9 @@
     <string name="emailLabel">email</string>
     <string name="passwordLabel">password</string>
     <string name="log_out">Log out</string>
+    <string name="hover_button_image">Hover Button Image</string>
+
+    <!--speech -->
+    <string name="send_message_box_hint">What would you like to ask?</string>
 
 </resources>
