--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -22,7 +22,7 @@
     <string name="title_activity_register_email">Email</string>
     <string name="title_activity_register_confirmPassword">Confirm password</string>
     <!--record part-->
-    <string name="record_main">Record Today\'s Meal:</string>
+    <string name="record_main">Record\nToday\'s\nMeal:</string>
     <string name="record_detail">Meal Details:</string>
     <string name="record_upload">Upload</string>
     <string name="record_meal">Upload your meal ^^</string>
@@ -33,9 +33,9 @@
     <string name="add_meal"> Add Meal</string>
     <string name="see_detail"> See detail</string>
     <!--recipe part-->
-    <string name="recommend_Recipe">\nRecommend Recipe</string>
+    <string name="recommend_Recipe">Recommend\nRecipe</string>
     <!--shop part-->
-    <string name="special_offer">\nSpecial Offer</string>
+    <string name="special_offer">Special\nOffer</string>
     <!--price part-->
     <string name="url_button">Click here to buy!</string>
     <string name="product">Product</string>
@@ -57,6 +57,12 @@
     <string name="hover_button_image">Hover Button Image</string>
     <!--personal info-->
     <string name="personal_info">Personal\nInformation</string>
+    <string name="my_plan">My plan</string>
+    <!--nutrition-->
+    <string name="fat_intake">Fat Daily Intake</string>
+    <string name="calory_intake">Calory Daily Intake</string>
+    <string name="protein_intake">Protein Daily Intake</string>
+    <string name="carb_intake">Carb Daily Intake</string>
     <!--speech -->
     <string name="send_message_box_hint">What would you like to ask?</string>
 
