--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -65,5 +65,6 @@
     <string name="email_change_fail">Change email failed, not a valid email address</string>
     <string name="email_change_success">Successfully changed email</string>
     <string name="general_email_change_fail">Change email failed - </string>
+    <string name="log_out_message">Logged out</string>
 
 </resources>
